[package]
name = "parsec-terminal"
version = "0.1.0"
edition = "2021"
description = "Advanced terminal emulator for Parsec IDE"
authors = ["divyaamshu1"]
license = "MIT"
repository = "https://github.com/divyaamshu1/parsec"
homepage = "https://github.com/divyaamshu1/parsec"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
# Core
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }

# Terminal
crossterm = { version = "0.27", features = ["event-stream"] }
ratatui = "0.26"
termwiz = "0.20"
vte = "0.11"

# PTY
pty-process = "0.4"
nix = { version = "0.29"}

# Parsec dependencies
parsec-core = { path = "../../core" }
parsec-extensions = { path = "../../extensions" }

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["multiplexer", "split", "search", "themes"]
multiplexer = []
split = []
search = []
themes = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true