[package]
name = "parsec-testing"
version = "0.1.0"
edition = "2021"
description = "Comprehensive testing tools for Parsec IDE"
authors = ["divyaamshu1"]
license = "MIT"
repository = "https://github.com/divyaamshu1/parsec"
homepage = "https://github.com/divyaamshu1/parsec"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
# Core
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }

# Testing frameworks
criterion = { version = "0.5", optional = true }
proptest = { version = "1.4", optional = true }
quickcheck = { version = "1.0", optional = true }
mockall = { version = "0.12", optional = true }
mockito = { version = "1.0", optional = true }
wiremock = { version = "0.5", optional = true }

# Load testing
goose = { version = "0.17", optional = true }
drill = { version = "0.8", optional = true }

# Reporting
tera = { version = "1.19", optional = true }
handlebars = { version = "5.1", optional = true }
plotly = { version = "0.8", optional = true }

# Parsec dependencies
parsec-core = { path = "../../core" }
parsec-extensions = { path = "../../extensions" }

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["unit", "integration", "e2e", "coverage", "load"]
unit = ["dep:criterion", "dep:proptest", "dep:quickcheck", "dep:mockall"]
integration = ["dep:mockito", "dep:wiremock"]
e2e = []
coverage = []
load = ["dep:goose", "dep:drill"]
reporting = ["dep:tera", "dep:handlebars", "dep:plotly"]
full = ["unit", "integration", "e2e", "coverage", "load", "reporting"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true